@@ -1,5 +1,13 @@
 2010-09-28  Murray Cumming  <murrayc@murrayc.com>
 
+	Use g_object_weak_ref() instead of the destroy signal.
+
+	* gtk/gtkmm/object.[h|cc]: _release_c_instance(): Use g_object_weak_ref()
+  instead of connecting to the GtkWidget::"destroy" signal, which was removed
+  from GTK+. We only ever used this for a short time anyway.
+
+2010-09-28  Murray Cumming  <murrayc@murrayc.com>
+
 	Object: Use g_object_run_dispose() as a gtk_object_destroy() replacement.
 
 	* gtk/gtkmm/object.cc: This does the same thing so it should work as well.
